syntax = "proto3";
package com.example.wire;

import "google/protobuf/timestamp.proto";
option java_package = "com.example.wire";
option java_outer_classname = "Example";

message CurrencyAmount {
    string currency = 1;
    double amount = 2;
}

message PhoneNumber {
    string international_code = 100;
    string area_code = 101;
    string local_number = 102;
}

message GeoPoint {
    // The latitude in degrees. It must be in the range [-90.0, +90.0].
    double lat = 1;

    // The longitude in degrees. It must be in the range [-180.0, +180.0].
    double lng = 2;
}
